1998-03-11  Raja R Harinath  <harinath@cs.umn.edu>

	* getopt.h: Don't mention getopt() for C++.  (Local fix).

	* vsnprintf.c: Actually fill it in.  It is from
	<URL:http://theos.com/~deraadt/snprintf.c>, with one small fix to
	actually make it compile. 

1998-03-09  Raja R Harinath  <harinath@cs.umn.edu>

	* easy-vsnprintf.c: New file.  Provides (v)snprintf as simple
	wrappers to `__vsnprintf'.  
	* vsnprintf.c: New file.  Empty for now.

Sun Mar  8 17:13:33 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am: Rewrote.  Library now named libgnomesupport, now
	installed if Gnome support code is built.

Sat Mar  7 00:03:26 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-argp.h (__mempcpy): New define.

	* strnlen.c: New file from glibc; needed by strndup.c.

Fri Mar  6 20:10:55 1998  Tom Tromey  <tromey@cygnus.com>

	* argp-fmtstream.h (__attribute__): Define unless using gcc.
	* argp.h (__attribute__): Define unless using gcc.

	* argp-help.c, argp-parse.c, argp.h: Imported new versions from
	glibc, while preserving local changes.

Wed Mar  4 00:58:27 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (libsupport_a_SOURCES): Added gnome-argp.c.
	* gnome-argp.c: New file.

	* argp-parse.c: Include gnome-argp.h.
	* argp-help.c: Include gnome-argp.h.

	* README-gnome, gnome-argp.h: New files.

	* argp-ba.c, argp-eexst.c, argp-fmtstream.c, argp-fmtstream.h,
	argp-fs-xinl.c, argp-help.c, argp-namefrob.h, argp-parse.c,
	argp-pv.c, argp-pvh.c, argp-test.c, argp-xinl.c, argp.h,
	strndup.c: New files, imported from glibc.  Please use "cvs
	import" if you import new versions.

	* Makefile.am (noinst_HEADERS): Added argp-fmtstream.h,
	argp-namefrob.h, argp.h, gnome-argp.h.
	(EXTRA_DIST): New macro.

1998-02-18  Raja R Harinath  <harinath@cs.umn.edu>

	* strcasecmp.c: New file, copied from `glibc'.  Used to provide
	replacement `strcasecmp' file.
	
