@@ -6,8 +6,11 @@ if BUILD_GNOME_SUPPORT
 
 lib_LTLIBRARIES = libgnomesupport.la
 
-supportinclude_HEADERS = gnome-argp.h getopt.h long-options.h argp-fmtstream.h \
-argp-namefrob.h argp.h
+supportinclude_HEADERS = gnome-argp.h getopt.h long-options.h argp.h
+
+# These are internal headers: they are used only when compiling and
+# should not be installed
+noinst_HEADERS = argp-fmtstream.h argp-namefrob.h
 
 libgnomesupport_la_SOURCES = long-options.c gnome-argp.c
 libgnomesupport_la_LIBADD  = @LTLIBOBJS@
